[workspace]
members = [
    "cli",
    "lib",
    "lib-macros",
    "android",
    "uniffi-bindgen",
    "gui",
    "i18n",
    "i18n-macros",
    "lib-has",
]
resolver = "2"

[workspace.package]
version = "2.4.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/Oppzippy/OpenSCQ30"
authors = ["Kyle Scheuing <kyle@kylescheuing.com>"]

[workspace.lints.clippy]
use_self = "warn"
derive_partial_eq_without_eq = "warn"
equatable_if_let = "warn"
redundant_pub_crate = "warn"
elidable_lifetime_names = "warn"
semicolon_if_nothing_returned = "warn"
cloned_instead_of_copied = "warn"
filter_map_next = "warn"
map_unwrap_or = "warn"
ignored_unit_patterns = "warn"

[profile.release]
strip = true
lto = true

[profile.release-fast]
inherits = "release"
lto = false

[profile.release-android]
inherits = "release"
strip = false

[workspace.dependencies]
openscq30-lib = { path = "./lib" }
openscq30-lib-has = { path = "./lib-has" }
openscq30-lib-macros = { path = "./lib-macros" }
openscq30-i18n = { path = "./i18n" }
openscq30-i18n-macros = { path = "./i18n-macros" }

clap = "4"
clap_complete = "4"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
macaddr = "1"
heck = "0.5"
itertools = "0.14"
futures = "0.3"
strum = "0.27"
serde = "1"
toml = "0.9"
anyhow = "1"
dirs = "6"
uuid = "1"
thiserror = "2"
nom = "8"
nom-language = "0.1"
log = "0.4"
android_logger = "0.15"
uniffi = "0.31"
serde_json = "1"
regex = "1"
windows = "0.62"
mockall = "0.13"
tempfile = "3"
predicates = "3"
bluer = "0.17"
hex = "0.4"
async-trait = "0.1"
libcosmic = { git = "https://github.com/Oppzippy/libcosmic.git" }
rusqlite = "0.38"
syn = "2"
quote = "1"
proc-macro2 = "1"
i18n-embed = "0.16"
i18n-embed-fl = "0.10"
rust-embed = "8"
cfg-if = "1"
tabled = "0.20"
terminal_size = "0.4"
glob = "0.3"
insta = "1"
insta-cmd = "0.6"
sysinfo = "0.37"
csv = "1"
indexmap = "2"
paste = "1"
open = "5"
proptest = { version = "1.0.0", default-features = false }
proptest-derive = "0.7"
embed-resource = "3"

[patch.'https://github.com/pop-os/softbuffer']
softbuffer = { git = "https://github.com/Oppzippy/softbuffer.git" }
