[package]
name = "openscq30-android"
version.workspace = true
license.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
openscq30-lib = { path = "../lib" }
openscq30-i18n = { path = "../i18n" }
tracing = { workspace = true, features = ["log-always"] }
log = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
android_logger = { workspace = true }
anyhow = { workspace = true }
macaddr = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
uniffi = { workspace = true, features = ["tokio"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
i18n-embed = { workspace = true, features = ["fluent-system"] }
i18n-embed-fl = { workspace = true }
cfg-if = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
