[package]
name = "openscq30-cli"
edition = "2024"
version.workspace = true
license.workspace = true

[[bin]]
name = "openscq30"
path = "src/main.rs"

[lints]
workspace = true

[features]
bundled-dependencies = ["openscq30-lib/bundled-dependencies"]

[dependencies]
openscq30-lib = { path = "../lib" }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
macaddr = { workspace = true }
dirs = { workspace = true }
strum = { workspace = true }
tabled = { workspace = true }
terminal_size = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }

[dev-dependencies]
insta = { workspace = true }
insta-cmd = { workspace = true }
tempfile = { workspace = true }
