[package]
name = "openscq30_gui"
edition = "2024"
version.workspace = true
license.workspace = true

[features]
default = ["bluetooth"]
bluetooth = ["openscq30_lib/bluetooth"]

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
libcosmic = { workspace = true, features = [
    "a11y",
    "dbus-config",
    "single-instance",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
    "about",
] }
i18n-embed = { workspace = true, features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
macaddr = { workspace = true }
openscq30_lib = { path = "../lib" }
openscq30_i18n = { path = "../i18n" }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
