[package]
name = "openscq30-gui"
edition = "2024"
version.workspace = true
license.workspace = true

[features]
default = ["bluetooth"]
bluetooth = ["openscq30-lib/bluetooth"]
bundled-dependencies = ["openscq30-lib/bundled-dependencies"]

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
libcosmic = { workspace = true, features = [
    "a11y",
    "dbus-config",
    "single-instance",
    "tokio",
    "winit",
    "wgpu",
] }
i18n-embed = { workspace = true, features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
macaddr = { workspace = true }
openscq30-lib = { path = "../lib" }
openscq30-i18n = { path = "../i18n" }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dirs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
itertools = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libcosmic = { workspace = true, features = ["wayland", "about"] }

[dev-dependencies]
tempfile = { workspace = true }
