[package]
name = "openscq30-gui"
edition = "2024"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
bundled-dependencies = ["openscq30-lib/bundled-dependencies"]

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
libcosmic = { workspace = true, features = [
    "a11y",
    "dbus-config",
    "single-instance",
    "tokio",
    "winit",
    "wgpu",
    "about",
] }
i18n-embed = { workspace = true, features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
macaddr = { workspace = true }
openscq30-lib = { workspace = true }
openscq30-i18n = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dirs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
itertools = { workspace = true }
open = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libcosmic = { workspace = true, features = ["wayland"] }

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = { workspace = true }
windows = { workspace = true, features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
tempfile = { workspace = true }
embed-resource = { workspace = true }
