[package]
name = "openscq30_gui_cosmic"
edition = "2021"
version.workspace = true
license.workspace = true

[features]
default = ["bluetooth"]
bluetooth = ["openscq30_lib/bluetooth"]

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
libcosmic = { workspace = true, features = [
    "a11y",
    "dbus-config",
    "single-instance",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
    "about",
] }
i18n-embed = { version = "0.15", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9.2"
rust-embed = "8.5.0"
macaddr = { workspace = true }
openscq30_lib = { path = "../lib", features = ["serde"] }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
