[package]
name = "openscq30-i18n-macros"
edition = "2024"
version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
openscq30-i18n = { path = "../i18n" }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
