[package]
name = "openscq30-lib-macros"
edition = "2024"
version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
openscq30-lib-has = { path = "../lib-has" }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
itertools = { workspace = true }
