[package]
name = "openscq30_lib"
version.workspace = true
license.workspace = true
edition = "2024"

[features]
default = ["serde"]
serde = []
bluetooth = []

[lib]
crate-type = ["lib"]

[dependencies]
openscq30_i18n = { path = "../i18n" }
openscq30_i18n_macros = { path = "../i18n_macros" }
web-sys = { workspace = true, optional = true, features = ["Window"] }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
futures = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true, features = ["derive"] }
weak-table = { workspace = true }
macaddr = { workspace = true }
nom = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
js-sys = { workspace = true, optional = true }
ordered-float = { workspace = true, features = ["serde"] }
float-cmp = { workspace = true, features = ["std"], default-features = false }
static_assertions = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
i18n-embed = { workspace = true, features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
cfg-if = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { workspace = true, features = ["bluetoothd", "rfcomm"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(any(target_os = "macos"))'.dependencies]
btleplug = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }

[target.'cfg(target_os = "windows")'.dependencies]
hex = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
windows = { workspace = true, features = [
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Devices_Enumeration",
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Bluetooth_Rfcomm",
    "Networking_Sockets",
    "deprecated",
] }
