[package]
name = "openscq30_lib_flatbuffers"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
openscq30_lib = { path = "../lib" }
flatbuffers = { workspace = true }
macaddr = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
static_assertions = { workspace = true }

[build-dependencies]
glob = { workspace = true }
