[package]
name = "openscq30_lib_protobuf"
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
openscq30_lib = { path = "../lib" }
bytes = { workspace = true }
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
