[package]
name = "openscq30_storage"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
openscq30_lib = { path = "../lib", features = ["bluetooth"] }
dirs = { workspace = true }
rusqlite = { workspace = true, features = ["hooks"] }
thiserror = { workspace = true }
macaddr = { workspace = true }
