[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soundcore_device_faker"
dynamic = ["version"]
description = "Fake Soundcore devices for reverse engineering"
dependencies = [
    "bumble @ git+https://github.com/google/bumble.git@3b399ea1a2bc52f64e4f6317fad75fd1b5db3e8c",
    "watchdog >= 6.0.0",
]
