[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soundcore_device_faker"
dynamic = ["version"]
description = "Fake Soundcore devices for reverse engineering"
dependencies = [
    "bumble @ git+https://github.com/google/bumble.git@27d02ef18d28cd22094a3bbd23ebc473b3abbcea",
    "watchdog >= 6.0.0",
]
