[package]
name = "openscq30_web_wasm"
description = "Packet parsing and such for OpenSCQ30 web"
repository = "https://github.com/Oppzippy/OpenSCQ30/tree/master/web/wasm"
license = "GPL-3.0-or-later"
version = "1.9.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
openscq30_lib = { path = "../../lib", features = ["wasm", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
uuid = "1"
static_assertions = "1"
macaddr = "1"
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }
serde_json = "1"
thiserror = "1"

wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Bluetooth",
    "BluetoothDevice",
    "BluetoothRemoteGattServer",
    "BluetoothRemoteGattService",
    "BluetoothRemoteGattCharacteristic",
] }
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
