[package]
name = "openscq30_web_wasm"
description = "Packet parsing and such for OpenSCQ30 web"
repository = "https://github.com/Oppzippy/OpenSCQ30/tree/master/web/wasm"
license.workspace = true
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
openscq30_lib = { path = "../../lib", features = ["wasm", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
uuid = { workspace = true }
static_assertions = { workspace = true }
macaddr = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time", "rt"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Bluetooth",
    "BluetoothDevice",
    "BluetoothRemoteGattServer",
    "BluetoothRemoteGattService",
    "BluetoothRemoteGattCharacteristic",
] }
tracing-wasm = { workspace = true }
console_error_panic_hook = { workspace = true }
